crates/vue_oxlint_jsx/src/test/snapshots/codegen/scripts_both_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

import { ref } from 'vue';const count = 0;export default {
  data() {
    return {
      count,
    }
  }
};async()=>{const number = ref(-1);<><template><div></div></template><script setup></script><script></script></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 220,
        },
        original_span: Span {
            start: 0,
            end: 227,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 26,
        },
        original_span: Span {
            start: 61,
            end: 87,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 26,
            end: 42,
        },
        original_span: Span {
            start: 133,
            end: 149,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 42,
            end: 107,
        },
        original_span: Span {
            start: 151,
            end: 216,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 118,
            end: 141,
        },
        original_span: Span {
            start: 89,
            end: 112,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 143,
            end: 175,
        },
        original_span: Span {
            start: 0,
            end: 44,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 143,
            end: 153,
        },
        original_span: Span {
            start: 0,
            end: 10,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 144,
            end: 152,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 153,
            end: 164,
        },
        original_span: Span {
            start: 13,
            end: 32,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 153,
            end: 158,
        },
        original_span: Span {
            start: 13,
            end: 18,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 154,
            end: 157,
        },
        original_span: Span {
            start: 14,
            end: 17,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 158,
            end: 164,
        },
        original_span: Span {
            start: 26,
            end: 32,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 160,
            end: 163,
        },
        original_span: Span {
            start: 28,
            end: 31,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 164,
            end: 175,
        },
        original_span: Span {
            start: 33,
            end: 44,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 166,
            end: 174,
        },
        original_span: Span {
            start: 35,
            end: 43,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 175,
            end: 198,
        },
        original_span: Span {
            start: 46,
            end: 122,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 175,
            end: 189,
        },
        original_span: Span {
            start: 46,
            end: 60,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 176,
            end: 182,
        },
        original_span: Span {
            start: 47,
            end: 53,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 183,
            end: 188,
        },
        original_span: Span {
            start: 54,
            end: 59,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 189,
            end: 198,
        },
        original_span: Span {
            start: 113,
            end: 122,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 191,
            end: 197,
        },
        original_span: Span {
            start: 115,
            end: 121,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 198,
            end: 215,
        },
        original_span: Span {
            start: 124,
            end: 226,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 198,
            end: 206,
        },
        original_span: Span {
            start: 124,
            end: 132,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 199,
            end: 205,
        },
        original_span: Span {
            start: 125,
            end: 131,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 206,
            end: 215,
        },
        original_span: Span {
            start: 217,
            end: 226,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 208,
            end: 214,
        },
        original_span: Span {
            start: 219,
            end: 225,
        },
    },
]
