crates/vue_oxlint_jsx/src/test/snapshots/codegen/scripts_directives_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/mod.rs
expression: "&codegen"
---
'use client';async()=>{'use server';<><script></script><script setup></script></>};
