crates/vue_oxlint_jsx/src/test/snapshots/codegen/scripts_empty_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/mod.rs
expression: "&codegen"
---
async () => {
	<><template><div></div></template><script setup></script><script></script></>;
};
