crates/vue_oxlint_jsx/src/test/snapshots/codegen/scripts_setup_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
assertion_line: 29
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

import{ref}from'vue';async()=>{const count=ref(0);<><template><div></div></template><script setup></script></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 112,
        },
        original_span: Span {
            start: 0,
            end: 119,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 20,
        },
        original_span: Span {
            start: 61,
            end: 86,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 7,
            end: 10,
        },
        original_span: Span {
            start: 70,
            end: 73,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 31,
            end: 49,
        },
        original_span: Span {
            start: 88,
            end: 108,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 36,
            end: 49,
        },
        original_span: Span {
            start: 94,
            end: 108,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 36,
            end: 42,
        },
        original_span: Span {
            start: 94,
            end: 99,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 43,
            end: 49,
        },
        original_span: Span {
            start: 102,
            end: 108,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 43,
            end: 46,
        },
        original_span: Span {
            start: 102,
            end: 105,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 47,
            end: 48,
        },
        original_span: Span {
            start: 106,
            end: 107,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 52,
            end: 84,
        },
        original_span: Span {
            start: 0,
            end: 44,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 52,
            end: 62,
        },
        original_span: Span {
            start: 0,
            end: 10,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 53,
            end: 61,
        },
        original_span: Span {
            start: 1,
            end: 9,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 62,
            end: 73,
        },
        original_span: Span {
            start: 13,
            end: 32,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 62,
            end: 67,
        },
        original_span: Span {
            start: 13,
            end: 18,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 63,
            end: 66,
        },
        original_span: Span {
            start: 14,
            end: 17,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 67,
            end: 73,
        },
        original_span: Span {
            start: 26,
            end: 32,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 69,
            end: 72,
        },
        original_span: Span {
            start: 28,
            end: 31,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 73,
            end: 84,
        },
        original_span: Span {
            start: 33,
            end: 44,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 75,
            end: 83,
        },
        original_span: Span {
            start: 35,
            end: 43,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 84,
            end: 107,
        },
        original_span: Span {
            start: 46,
            end: 118,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 84,
            end: 98,
        },
        original_span: Span {
            start: 46,
            end: 60,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 85,
            end: 91,
        },
        original_span: Span {
            start: 47,
            end: 53,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 92,
            end: 97,
        },
        original_span: Span {
            start: 54,
            end: 59,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 98,
            end: 107,
        },
        original_span: Span {
            start: 109,
            end: 118,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 100,
            end: 106,
        },
        original_span: Span {
            start: 111,
            end: 117,
        },
    },
]
