crates/vue_oxlint_jsx/src/test/snapshots/codegen/typescript_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "format!(\"=============== Source Text ===============\\n\\n{}\\n\\n=============== Mappings ===============\\n\\n{:#?}\",\nret.source_text, ret.mappings)"
---
=============== Source Text ===============

async()=>{const a = someFunction<{ msg: 1 }>();const b = someFunction<SomeType>();<><script lang="ts" setup></script><template><div>{a.msg}</div><div></div></template></>};

=============== Mappings ===============

[
    Mapping {
        codegen_span: Span {
            start: 0,
            end: 172,
        },
        original_span: Span {
            start: 0,
            end: 214,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 10,
            end: 46,
        },
        original_span: Span {
            start: 25,
            end: 61,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 47,
            end: 81,
        },
        original_span: Span {
            start: 62,
            end: 96,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 84,
            end: 117,
        },
        original_span: Span {
            start: 0,
            end: 124,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 84,
            end: 108,
        },
        original_span: Span {
            start: 0,
            end: 24,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 85,
            end: 91,
        },
        original_span: Span {
            start: 1,
            end: 7,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 92,
            end: 101,
        },
        original_span: Span {
            start: 8,
            end: 17,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 92,
            end: 96,
        },
        original_span: Span {
            start: 8,
            end: 12,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 97,
            end: 101,
        },
        original_span: Span {
            start: 14,
            end: 16,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 102,
            end: 107,
        },
        original_span: Span {
            start: 18,
            end: 23,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 108,
            end: 117,
        },
        original_span: Span {
            start: 115,
            end: 124,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 110,
            end: 116,
        },
        original_span: Span {
            start: 117,
            end: 123,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 117,
            end: 167,
        },
        original_span: Span {
            start: 126,
            end: 213,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 117,
            end: 127,
        },
        original_span: Span {
            start: 126,
            end: 136,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 118,
            end: 126,
        },
        original_span: Span {
            start: 127,
            end: 135,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 127,
            end: 145,
        },
        original_span: Span {
            start: 139,
            end: 161,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 127,
            end: 132,
        },
        original_span: Span {
            start: 139,
            end: 144,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 128,
            end: 131,
        },
        original_span: Span {
            start: 140,
            end: 143,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 132,
            end: 139,
        },
        original_span: Span {
            start: 144,
            end: 155,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 133,
            end: 138,
        },
        original_span: Span {
            start: 147,
            end: 152,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 133,
            end: 134,
        },
        original_span: Span {
            start: 147,
            end: 148,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 135,
            end: 138,
        },
        original_span: Span {
            start: 149,
            end: 152,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 139,
            end: 145,
        },
        original_span: Span {
            start: 155,
            end: 161,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 141,
            end: 144,
        },
        original_span: Span {
            start: 157,
            end: 160,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 145,
            end: 156,
        },
        original_span: Span {
            start: 164,
            end: 201,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 145,
            end: 150,
        },
        original_span: Span {
            start: 164,
            end: 169,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 146,
            end: 149,
        },
        original_span: Span {
            start: 165,
            end: 168,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 150,
            end: 156,
        },
        original_span: Span {
            start: 195,
            end: 201,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 152,
            end: 155,
        },
        original_span: Span {
            start: 197,
            end: 200,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 156,
            end: 167,
        },
        original_span: Span {
            start: 202,
            end: 213,
        },
    },
    Mapping {
        codegen_span: Span {
            start: 158,
            end: 166,
        },
        original_span: Span {
            start: 204,
            end: 212,
        },
    },
]
