crates/vue_oxlint_jsx/src/test/snapshots/codegen/void_vue.snap
---
source: crates/vue_oxlint_jsx/src/test/codegen.rs
expression: "&codegen"
---
async () => {
	<><template>
  <br />
  <input />
  <img />&lt;/img&gt;
</template>
</>;
};
